# mcp-memobird

./: .flake8  .gitignore  README.md  main.py  memobird_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
mcp_memobird/: __init__.py  client.py  main.py
src/: client.py  config.py  main.py  memobird_client.py  memobird_tools.py  run.py
tests/: test_main_integration.py  test_memobird_client.py
