[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memobird"
version = "0.1.0"
description = "Memobird printer server with Model Context Protocol (MCP) support"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Dray"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=0.4.2",
    "Pillow>=10.0.0",
    "requests>=2.30.0",
    "numpy>=1.24.0",
    "starlette>=0.30.0",
    "uvicorn>=0.23.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.scripts]
mcp-memobird = "src.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"